--- a/frontend/src/components/createpost/CreatePost.scss
+++ b/frontend/src/components/createpost/CreatePost.scss
@@ -43,6 +43,7 @@
   padding: 20px;
   width: 400px;
   border-radius: 10px;
+  color: black;
   z-index: 1100;
   box-shadow: 0 4px 30px rgba(0,0,0,0.2);
   animation: pop 0.2s ease-in-out;
@@ -53,9 +54,53 @@
   to { transform: scale(1); opacity: 1; }
 }
 
+.createform {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  margin-top: 3px;
+
+  background: #ffffff;
+  padding: 25px 30px;
+  border-radius: 12px;
+
+  width: 350px;
+  max-width: 92%;
+  box-shadow: 0 10px 35px rgba(0, 0, 0, 0.15);
+
+  animation: fadeIn 0.25s ease-out;
+
+  span {
+    font-size: 15px;
+    font-weight: 600;
+    margin-bottom: -8px;
+    color: #333;
+  }
+
+  input,
+  select {
+    padding: 10px 12px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+
+    font-size: 15px;
+    outline: none;
+    transition: border-color 0.2s ease;
+
+    &:focus {
+      border-color: #6a74f7; // bluish accent
+    }
+  }
+
+  select {
+    cursor: pointer;
+    background-color: #f9f9f9;
+  }
+}
+
 /* Textarea styling */
 textarea {
-  width: 100%;
+  width: 95%;
   height: 120px;
   padding: 10px;
   margin-top: 10px;
@@ -64,6 +109,11 @@ textarea {
   border: 1px solid #ccc;
 }
 
+.top{
+  display: flex;
+  justify-content: space-around;
+  gap: 250px;
+}
 /* Buttons */
 .actions {
   display: flex;
@@ -71,9 +121,18 @@ textarea {
   margin-top: 15px;
 }
 
+.close{
+  margin-left: 15px;
+  background: transparent;
+  border: none;
+  font-size: 30px;
+  cursor: pointer;
+}
+
 .create_button, .submit-btn {
   padding: 8px 15px;
   background: royalblue;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: white;
   border: none;
   border-radius: 6px;
@@ -92,4 +151,16 @@ textarea {
         margin-left: 40px;
         width: 96%;
     }
+}
+@media(max-width:600px){
+  .modal{
+    width:250px;
+    
+  }
+  .createform{
+    width: 200px;
+  }
+  .top{
+    gap: 80px;
+  }
 }
