--- a/frontend/src/pages/profile/profile.scss
+++ b/frontend/src/pages/profile/profile.scss
@@ -26,8 +26,10 @@
       .top {
         display: flex;
         align-items: center;
-        gap: 40px;
-        // width: 100%;
+        gap: 60px;
+        justify-content: flex-start;
+        padding-left: 50px;
+        width: 100%;
 
         .left img {
           width: 150px;
