--- a/frontend/src/components/post/post.scss
+++ b/frontend/src/components/post/post.scss
@@ -160,7 +160,7 @@
     }
 
     @media (max-width: 600px) {
-      max-width: 100%;
+      width: auto;
       border-radius: 10px;
       // padding-right: 40px;
       margin-left: 10px;
