--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -81,7 +81,17 @@
     }
 
     // ✅ Media query INSIDE themify
+    @media (max-width: 1023px) {
+      .left{
+        .search{
+          display: none;
+        }
+      }
+    }
     @media (max-width: 850px) {
+      .search{
+        display:none;
+      }
       display: none;
     }
   }
