--- a/frontend/src/components/posts/posts.scss
+++ b/frontend/src/components/posts/posts.scss
@@ -1,10 +1,19 @@
 .posts{
     display: flex;
     flex-direction: column;
-    margin-right:30px
+    margin-right:0px
     
 }
 @media(max-width:1023px){
+    .posts{
+        display: flex;
+        flex-direction: column;
+        // margin-right: 40px;
+        margin-left: 40px;
+        width: 100%;
+    }
+}
+@media(max-width:600px){
     .posts{
         margin-right: 40px;
         margin-left: 40px;
