--- a/frontend/src/components/createpost/CreatePost.scss
+++ b/frontend/src/components/createpost/CreatePost.scss
@@ -121,6 +121,16 @@ textarea {
   justify-content: space-between;
   margin-top: 15px;
 }
+.attach{
+  display: flex;
+  flex-direction: row;
+}
+.image{
+  display: flex;
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+}
 
 .close{
   margin-left: 15px;
