--- a/frontend/src/components/post/post.scss
+++ b/frontend/src/components/post/post.scss
@@ -35,6 +35,7 @@
           margin-bottom: 5px;
 
           img {
+            // margin: 5px;
             width: 42px;
             height: 42px;
             border-radius: 50%;
@@ -79,7 +80,9 @@
       }
 
       .content {
+        margin: 5px;
         p {
+          margin-left: 16px;
           font-size: 14.5px;
           color: themed("textColor");
           // margin-bottom: 10px;
@@ -89,6 +92,7 @@
         }
         
         img {
+          margin: 5px;
           width: 100%;
           gap: 10px;
           border-radius: 12px;
