--- a/frontend/src/components/post/post.scss
+++ b/frontend/src/components/post/post.scss
@@ -94,10 +94,11 @@
         img {
           margin: 5px;
           width: 100%;
+          height: 100%;
           gap: 10px;
           border-radius: 12px;
           object-fit: cover;
-          max-height: 500px;
+          max-height: 1000px;
         }
       }
       
@@ -173,6 +174,7 @@
       border-radius: 10px;
       // padding-right: 40px;
       margin-left: 10px;
+      max-width: 500px;
       .container {
         padding: 10px;
 
@@ -180,6 +182,9 @@
           flex-direction: row;
           gap: 6px;
         }
+      }
+      .content img{
+        // max-width: ;
       }
     }
   }
