--- a/frontend/src/components/comments/comments.scss
+++ b/frontend/src/components/comments/comments.scss
@@ -26,7 +26,7 @@
             img{
                 margin-top: 0px;
                 height: 40px;
-                width: 55px;
+                width: 40px;
                 border-radius: 50%;
                 object-fit: cover;
             }
@@ -65,6 +65,7 @@
     
                 p{
                     color: themed("textColor");
+                    font-size: small;
                 }
 
             }
