--- a/frontend/src/components/createpost/CreatePost.scss
+++ b/frontend/src/components/createpost/CreatePost.scss
@@ -1,19 +1,23 @@
+@import "../../style.scss";
+
+
 .create{
+  @include themify($themes){
     margin-top: 15px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     width: 700px;
     // min-width: 700px;
     max-width: 700px;
-    // background: themed("bg");
+    background: themed("containerbg");
     // margin: 20px;
     // margin-left: 10px;
     // color: themed("textColor");
     // border: 1px solid rgba(180, 180, 180, 0.25);
-    // border-radius: 14px;
+    border-radius: 14px;
     // box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     // transition: all 0.25s ease;
     // overflow: hidden;
-
+  }
 }
 .inner{
     display: flex;
