--- a/frontend/src/pages/profile/profile.scss
+++ b/frontend/src/pages/profile/profile.scss
@@ -96,6 +96,7 @@
         justify-content: center;
         gap: 20px;
         width: 100%;
+        height: 100%;
 
         button {
           padding: 14px 25px;
@@ -108,6 +109,7 @@
           font-size: 16px;
           cursor: pointer;
           transition: 0.2s;
+          height: 100%;
 
           &:hover {
             background: lighten(themed("bgSoft"), 4%);
