--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -3,7 +3,7 @@ $themes:(
         textColor:#000,
         bg:rgb(237, 231, 231),
         logo:rgb(17, 16, 16),
-        bgSoft:#d0d0d0,
+        bgSoft:#dedada,
         textColorSoft:#555,
         border:rgba(181, 175, 175, 0.738),
         upbg:rgba(193, 189, 189, 0.934),
@@ -14,7 +14,7 @@ $themes:(
             textColor:whitesmoke,
             bg:#101010,
             logo:white,
-            bgSoft:#333,
+            bgSoft:#1f1e1e,
             textColorSoft:lightgray,
             border:#454242,
             upbg:rgba(48, 47, 47),
