--- a/frontend/src/components/chat/chat.scss
+++ b/frontend/src/components/chat/chat.scss
@@ -9,7 +9,7 @@
     border-radius: 10px;
     // height: 100000px;
     margin: 10px;
-
+    background: themed(bgSoft);
     transition: background-color 0.2s ease;
 
     &:hover {
