--- a/frontend/src/components/post/post.scss
+++ b/frontend/src/components/post/post.scss
@@ -7,7 +7,7 @@
     width: 700px;
     // min-width: 700px;
     max-width: 700px;
-    background: themed("containerbg");
+    background: themed("bgSoft");
     margin: 20px;
     color: themed("textColor");
     border: 1px solid rgba(180, 180, 180, 0.25);
