--- a/frontend/src/pages/messages/messages.scss
+++ b/frontend/src/pages/messages/messages.scss
@@ -15,7 +15,7 @@
       min-width: 260px;
       max-width: 600px;
       background: themed("containerbg");
-      border-right: 1px solid rgba(180,180,180,.25);
+      border-right: 1px solid rgba(86, 85, 85, 0.495);
       display: flex;
       flex-direction: column;
 
